# geek-szitman-supercamera

./: .gitignore  CMakeLists.txt  Makefile  README.md  STREAM_PROTOCOL.md
include/: supercamera_core.hpp
scripts/: stream_receiver.py
src/: supercamera_core.cpp  supercamera_core.d  supercamera_poc.cpp  supercamera_stream_sender.cpp
